--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import LanguageTags from '../components/LanguageTags.astro';
       <div id="about">
               <h2 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">Alyssa Gregorash</h2>
               <p class="text-gray-600 dark:text-gray-300 mb-4">
-                Hello, I am Alyssa, a 2024 graduate with a passion for development, design, and storytelling.
+                Hello, I am Alyssa (not pictured), a 2024 graduate with a passion for development, design, and storytelling.
               </p>
               <p class="font-bold">Quick Facts</p>
               <ul class="list-disc pl-8">
