--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import LanguageTags from '../components/LanguageTags.astro';
               <p class="mt-4">If you are looking for my alias Graduation Cat, look <a href="https://graduationcat.ca/" target="_blank" class="font-bold">here</a>.</p>
       </div>
       <div class="rounded-lg overflow-hidden shadow-xl">
-              <img src="image/CreditAutumn.JPG" alt="cat" class="w-full h-auto" />
+              <img src="/src/assets/img/CreditAutumn.JPG" alt="cat" class="w-full h-auto" />
       </div>
   </div>
 
