--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import ProjectsCode from '../components/ProjectsCode.astro';
 import ProjectsGraphic from '../components/ProjectsGraphic.astro';
 import ProjectsWriting from '../components/ProjectsWriting.astro';
 import LanguageTags from '../components/LanguageTags.astro';
+import CatPic from '~/assets/img/CreditAutumn.JPG';
 ---
 
 <Layout title="Alyssa's Portfolio">
@@ -35,7 +36,7 @@ import LanguageTags from '../components/LanguageTags.astro';
               <p class="mt-4">If you are looking for my alias Graduation Cat, look <a href="https://graduationcat.ca/" target="_blank" class="font-bold">here</a>.</p>
       </div>
       <div class="rounded-lg overflow-hidden shadow-xl">
-              <img src="/src/assets/img/CreditAutumn.JPG" alt="cat" class="w-full h-auto" />
+              <img src={CatPic} alt="cat" class="w-full h-auto" />
       </div>
   </div>
 
