--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ProjectsCode from '../components/ProjectsCode.astro';
 import ProjectsGraphic from '../components/ProjectsGraphic.astro';
 import ProjectsWriting from '../components/ProjectsWriting.astro';
 import LanguageTags from '../components/LanguageTags.astro';
-import CatPic from './assets/img/CreditAutumn.JPG';
+import CatPic from '../assets/img/CreditAutumn.JPG';
 ---
 
 <Layout title="Alyssa's Portfolio">
