--- a/src/components/ProjectsWriting.astro
+++ b/src/components/ProjectsWriting.astro
@@ -4,7 +4,7 @@ const projects = [
     content: "A chance encounter leads an aspiring mercenary to brush with the supernatural.  The path he's stumbled on drives close to the deepest corners of his past, the most vivid mysteries of the Ambling Expanse, and the dark presence wedged next to his mind.",
     title: "Across the Ambling Expanse",
     tags: "Novel, Fiction, ~470 pages, Fantasy",
-    pic: "src/assets/img/amblingexpanse.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/amblingexpanse.png?raw=true",
     link: "https://graduation-cat.itch.io/across-the-ambling-expanse"
   }
 ];
