Update ProjectsCode.astro image formats

--- a/src/components/ProjectsCode.astro
+++ b/src/components/ProjectsCode.astro
@@ -4,49 +4,49 @@ const projects = [
     content: "Cat Crazy is a cozy savenger hunt following a recent retiree who can talk to cats.",
     title: "Cat Crazy",
     tags: "Video Game, Cute, Cozy, Mystery, Cats",
-    pic: "src/assets/img/catcrazy.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/catcrazy.png?raw=true",
     link: "https://store.steampowered.com/app/3578310/Cat_Crazy/"
   },
   {
     content: "The official website for Ashworth Children's Centre inc.",
     title: "Ashworth Children's Centre Website",
     tags: "Website, Professional, Layout",
-    pic: "src/assets/img/ashworthcc.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/ashworthcc.png?raw=true",
     link: "https://www.ashworthcc.ca/"
   },
   {
     content: "A website to compile all projects published under my alias, Graduation Cat.",
     title: "Graduation Cat Website",
     tags: "Website, Layout",
-    pic: "src/assets/img/gradcatweb.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/gradcatweb.png?raw=true",
     link: "https://graduationcat.ca/"
   },
   {
     content: "The first website I ever made.  Has a few links I don't have elsewhere.  Minimalistic but functional.",
     title: "Old Portfolio",
     tags: "Website, Legacy",
-    pic: "src/assets/img/oldwebsite.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/oldwebsite.png?raw=true",
     link: "https://c4ke2.github.io/"
   },
   {
     content: "A point and click game I made as part of a team for a school project. Download available.",
     title: "Mega Mystery Mansion",
     tags: "Video Game, Point-and-Click, Puzzle, Funny",
-    pic: "src/assets/img/MMM.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/MMM.png?raw=true",
     link: "https://c4ke2.github.io/game_mansion.html"
   },
   {
     content: "A solo practice project I made to learn Unity3D and C#. No download available.",
     title: "A Walk in the Rain",
     tags: "Video Game, Walking Sim, Moral Dilemma",
-    pic: "src/assets/img/rainwalk.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/rainwalk.png?raw=true",
     link: "https://c4ke2.github.io/game_rain.html"
   },
   {
     content: "Many projects I worked on at University, such as algorithms, web apps, graphics, apps, and databases.",
     title: "Misc. School Projects",
     tags: "Code",
-    pic: "src/assets/img/wordeo.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/wordeo.png?raw=true",
     link: "https://c4ke2.github.io/school.html"
   },
 ];
