Update ProjectsGraphic.astro image formats

--- a/src/components/ProjectsGraphic.astro
+++ b/src/components/ProjectsGraphic.astro
@@ -4,28 +4,28 @@ const projects = [
     content: "The official website for Ashworth Children's Centre inc.",
     title: "Ashworth Children's Centre Website",
     tags: "Website, Professional, Layout",
-    pic: "src/assets/img/ashworthcc.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/ashworthcc.png?raw=true",
     link: "https://www.ashworthcc.ca/"
   },
   {
     content: "A website to compile all projects published under my alias, Graduation Cat.",
     title: "Graduation Cat Website",
     tags: "Website, Layout",
-    pic: "src/assets/img/gradcatweb.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/gradcatweb.png?raw=true",
     link: "https://graduationcat.ca/"
   },
   {
     content: "A set of graphical assets for use in game development or art.",
     title: "House Interior 32x32",
     tags: "Game Asset, Tileset, Pixel Art",
-    pic: "src/assets/img/housetileset.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/housetileset.png?raw=true",
     link: "https://graduation-cat.itch.io/house-interior-tileset-32x32"
   },
   {
     content: "A series of art pieces made for a school project, with the purpose of exploring the Adobe Creative Suite.",
     title: "Cryptid Coverup",
     tags: "Photoshop, Illustrator, InDesign",
-    pic: "src/assets/img/cryptid.png",
+    pic: "https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/cryptid.png?raw=true",
     link: "https://c4ke2.github.io/art_cryptid.html"
   }
 ];
