last image fix hopefully

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ProjectsCode from '../components/ProjectsCode.astro';
 import ProjectsGraphic from '../components/ProjectsGraphic.astro';
 import ProjectsWriting from '../components/ProjectsWriting.astro';
 import LanguageTags from '../components/LanguageTags.astro';
-import CatPic from '../assets/img/CreditAutumn.JPG';
+import CatPic from 'https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/CreditAutumn.JPG?raw=true';
 ---
 
 <Layout title="Alyssa's Portfolio">
