--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,6 @@ import ProjectsCode from '../components/ProjectsCode.astro';
 import ProjectsGraphic from '../components/ProjectsGraphic.astro';
 import ProjectsWriting from '../components/ProjectsWriting.astro';
 import LanguageTags from '../components/LanguageTags.astro';
-import CatPic from 'https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/CreditAutumn.JPG?raw=true';
 ---
 
 <Layout title="Alyssa's Portfolio">
@@ -36,7 +35,7 @@ import CatPic from 'https://github.com/c4ke2/portfolio-website/blob/main/src/ass
               <p class="mt-4">If you are looking for my alias Graduation Cat, look <a href="https://graduationcat.ca/" target="_blank" class="font-bold">here</a>.</p>
       </div>
       <div class="rounded-lg overflow-hidden shadow-xl">
-              <img src={CatPic} alt="cat" class="w-full h-auto" />
+              <img src="https://github.com/c4ke2/portfolio-website/blob/main/src/assets/img/CreditAutumn.JPG?raw=true" alt="cat" class="w-full h-auto" />
       </div>
   </div>
 
